--- a/locales/en.json
+++ b/locales/en.json
@@ -126,5 +126,7 @@
     "Protected - Only owner can edit (forbid guests)": "Protected - Only owner can edit (forbid guests)",
     "Private - Only owner can view & edit": "Private - Only owner can view & edit",
     "changed": "changed",
-    "created": "created"
+    "created": "created",
+    "Upload Images": "Upload Images",
+    "Plain Text": "Plain Text"
 }
